deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 1
  template:
    metadata:
      name: goserver
      labels:
        app: goserver
    spec:
      containers:
      - name: goserver
        image: mrpsousa/api-go-expert

        resources:
          requests:  
            cpu: "0.30"
            memory: 20Mi
          limits:
            cpu: "0.50"
            memory: 25Mi

        livenessProbe:
          httpGet:
            path: /ping
            port: 8000
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 1
          successThreshold: 1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "ngnix"
spec:
  rules:
  - host: "ingress.fullcycle.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
              service:
                name: goserver-service
                port:
                  number: 8000
